examples/test/testpolicy12233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12233
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key34: value41
      key8: value6
      key37: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value11
          key41: value22
      podSelector:
        matchLabels:
          key43: value9
          key26: value43
